# src/index.js
@@ -5,6 +5,7 @@ import fs from "fs";
 import YAML from "yaml";
 import authRoutes from "./routes/auth.js";
 import userRoutes from "./routes/user.js";
+import postRoutes from "./routes/post.js";
 import cors from "cors";
 import morgan from "morgan";
 
@@ -31,6 +32,7 @@ app.get("/health", (req, res) => {
 
 app.use("/api/auth", authRoutes);
 app.use("/api/users", userRoutes);
+app.use("/api/posts", postRoutes);
 
 const PORT = process.env.PORT || 3000;
 app.listen(PORT, () => {
